@@ -1,16 +1,18 @@
 package titanicsend.pattern.glengine;
 
+import static titanicsend.pattern.glengine.GLShaderPattern.NO_TEXTURE;
+
 import heronarts.lx.GpuDevice;
 import heronarts.lx.LX;
 import heronarts.lx.color.LXColor;
 import heronarts.lx.model.LXModel;
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import titanicsend.color.TEColorType;
 import titanicsend.effect.TEEffect;
 import titanicsend.pattern.jon.VariableSpeedTimer;
+import titanicsend.pattern.yoffa.shader_engine.Uniform;
 
 /**
  * Wrapper class for OpenGL shaders. Simplifies handling of context and native memory management,
@@ -19,10 +21,6 @@ import titanicsend.pattern.jon.VariableSpeedTimer;
 public class GLShaderEffect extends TEEffect implements GpuDevice {
 
   private final VariableSpeedTimer iTime = new VariableSpeedTimer();
-  protected ByteBuffer imageBuffer;
-  protected ByteBuffer mappedBuffer;
-  protected final int mappedBufferWidth = GLEngine.getMappedBufferWidth();
-  protected final int mappedBufferHeight = GLEngine.getMappedBufferHeight();
 
   // list of shaders to run
   private final List<TEShader> mutableShaders = new ArrayList<>();
@@ -30,16 +28,28 @@ public class GLShaderEffect extends TEEffect implements GpuDevice {
 
   private boolean modelChanged = true;
 
+  // Input texture handle that is the output from the pattern or preceding effect
+  public int iDst = -1;
+  // If there are multiple shaders in one effect, the iDst texture of each will be the output
+  // of the previous shader
+  private int currentShaderDst = -1;
+
+  private static class TEEffectUniforms {
+    private Uniform.Sampler2D iDst;
+    private Uniform.Float1 level; // Is this universal for LXEffects?
+
+    private Uniform.Float1 iTime;
+    private Uniform.Float3 iColorRGB;
+    private Uniform.Float3 iColorHSB;
+    private Uniform.Float3 iColor2RGB;
+    private Uniform.Float3 iColor2HSB;
+  }
+
+  private final TEEffectUniforms uniforms = new TEEffectUniforms();
+  private boolean initializedUniforms = false;
+
   public GLShaderEffect(LX lx) {
     super(lx);
-
-    imageBuffer = TEShader.allocateBackBuffer();
-    mappedBuffer = TEShader.allocateMappedBuffer(mappedBufferWidth, mappedBufferHeight);
-    // zero mappedBuffer
-    mappedBuffer.rewind();
-    for (int i = 0; i < mappedBuffer.capacity(); i++) {
-      mappedBuffer.put(i, (byte) 0);
-    }
   }
 
   protected TEShader addShader(GLShader.Config config) {
@@ -48,50 +58,12 @@ public class GLShaderEffect extends TEEffect implements GpuDevice {
     return shader;
   }
 
-  protected ByteBuffer getImageBuffer() {
-    return imageBuffer;
+  protected TEShader addShader(String shaderFilename) {
+    return addShader(GLShader.config(lx).withFilename(shaderFilename));
   }
 
   public double getTime() {
     return iTime.getTime();
-  }
-
-  @Override
-  protected void onModelChanged(LXModel model) {
-    super.onModelChanged(model);
-    this.modelChanged = true;
-  }
-
-  protected void run(double deltaMs, double enabledAmount) {
-    LXModel m = getModel();
-    iTime.tick();
-
-    // Update the model coords texture only when changed (and the first run)
-    if (this.modelChanged) {
-      this.modelChanged = false;
-      for (TEShader shader : this.shaders) {
-        shader.setModelCoordinates(m);
-      }
-    }
-
-    // set up rectangular texture buffers for effects that need them
-    ShaderPainter.mapToBufferDirect(m.points, imageBuffer, colors);
-    ShaderPainter.mapFromLinearBuffer(
-        m.points, mappedBufferWidth, mappedBufferHeight, mappedBuffer, colors);
-
-    // run the chain of shaders, except for the last one,
-    // copying the output of each to the next shader's input texture
-    TEShader shader = null;
-    int n = this.shaders.size();
-    for (int i = 0; i < n; i++) {
-      shader = this.shaders.get(i);
-      shader.run();
-    }
-
-    // paint the final shader output to the car.
-    if (shader != null) {
-      ShaderPainter.mapToPointsDirect(m.points, imageBuffer, getColors());
-    }
   }
 
   protected int getColor1() {
@@ -102,61 +74,102 @@ public class GLShaderEffect extends TEEffect implements GpuDevice {
     return lx.engine.palette.getSwatchColor(TEColorType.SECONDARY.swatchIndex()).getColor();
   }
 
-  // GPU Mixer Interface Methods
-  
-  /**
-   * Set input texture for shader processing (required by GLMixer)
-   */
-  public void setInput(int inputTextureHandle) {
-    // Store input texture for shaders to use
-    // For now, we'll implement this in subclasses that need it
+  @Override
+  protected void onModelChanged(LXModel model) {
+    super.onModelChanged(model);
+    this.modelChanged = true;
   }
-  
-  /**
-   * Run the shader effect (no-parameter version required by GLMixer)
-   * NOTE: This is called by GLMixer AFTER the normal engine has already run the effect.
-   * We should NOT re-run the shader here - just ensure the texture is available.
-   */
-  public void run() {
-    // The shader has already been executed by the normal LX engine loop.
-    // The texture is already available via getRenderTexture().
-    // No need to re-run the shader - this would cause double rendering!
-    
-    // If we need any GPU mixer specific processing, it would go here.
-    // For now, this is essentially a no-op since the texture is already rendered.
+
+  public void setDst(int iDst) {
+    this.iDst = iDst;
   }
-  
+
+  protected void run(double deltaMs, double enabledAmount) {
+    // Safety check: bail if the effect contains no shaders
+    if (this.shaders.isEmpty()) {
+      return;
+    }
+
+    iTime.tick();
+
+    // Update the model coords texture only when changed (and the first run)
+    if (this.modelChanged) {
+      this.modelChanged = false;
+      LXModel m = getModel();
+      for (TEShader shader : this.shaders) {
+        shader.setModelCoordinates(m);
+      }
+    }
+
+    // Set the CPU buffer for any non-last shader to be null. These will be chained.
+    for (int i = 0; i < (this.shaders.size() - 1); i++) {
+      this.shaders.get(i).setCpuBuffer(null);
+    }
+    // Set the CPU buffer for the last shader, if using CPU mixer
+    this.shaders.getLast().setCpuBuffer(this.lx.engine.renderMode.cpu ? this.colors : null);
+
+    // Run the chain of shaders,
+    // mapping the output texture of each to the next shader's input texture
+    this.currentShaderDst = this.iDst;
+    for (TEShader shader : this.shaders) {
+      shader.run();
+      this.currentShaderDst = shader.getRenderTexture();
+    }
+  }
+
   /**
-   * Get the render output texture handle (required by GLMixer)
+   * Retrieve the render(output) texture handle for the effect.
+   *
+   * @return The output texture handle of the last shader, or NO_TEXTURE if no shaders exist
    */
   public int getRenderTexture() {
     if (!this.shaders.isEmpty()) {
-      return this.shaders.get(this.shaders.size() - 1).getRenderTexture();
+      return this.shaders.getLast().getRenderTexture();
+    } else {
+      return NO_TEXTURE;
     }
-    return -1; // No texture
+  }
+
+  private void initializeUniforms(GLShader s) {
+    // Keep direct references to each Uniform, saves hashmap lookup.
+    this.uniforms.iDst = s.getUniformSampler2D("iDst");
+    this.uniforms.iTime = s.getUniformFloat1("iTime");
+    this.uniforms.iColorRGB = s.getUniformFloat3("iColorRGB");
+    this.uniforms.iColorHSB = s.getUniformFloat3("iColorHSB");
+    this.uniforms.iColor2RGB = s.getUniformFloat3("iColor2RGB");
+    this.uniforms.iColor2HSB = s.getUniformFloat3("iColor2HSB");
   }
 
   // send a subset of the controls we use with patterns
   private void setUniforms(GLShader s) {
-    s.setUniform("iTime", (float) getTime());
+    if (!this.initializedUniforms) {
+      this.initializedUniforms = true;
+      initializeUniforms(s);
+    }
+
+    // Shaders are run in sequence.  Pass the current iDst value, which may be the output of the
+    // previous shader
+    this.uniforms.iDst.setValue(this.currentShaderDst);
+
+    this.uniforms.iTime.setValue((float) getTime());
 
     // get current primary and secondary colors
     // TODO - we're just grabbing swatch colors here.  Do we need to worry about modulation?
     int col = getColor1();
-    s.setUniform(
-        "iColorRGB",
+    this.uniforms.iColorRGB.setValue(
         (float) (0xff & LXColor.red(col)) / 255f,
         (float) (0xff & LXColor.green(col)) / 255f,
         (float) (0xff & LXColor.blue(col)) / 255f);
-    s.setUniform("iColorHSB", LXColor.h(col) / 360f, LXColor.s(col) / 100f, LXColor.b(col) / 100f);
+    this.uniforms.iColorHSB.setValue(
+        LXColor.h(col) / 360f, LXColor.s(col) / 100f, LXColor.b(col) / 100f);
 
     col = getColor2();
-    s.setUniform(
-        "iColor2RGB",
+    this.uniforms.iColor2RGB.setValue(
         (float) (0xff & LXColor.red(col)) / 255f,
         (float) (0xff & LXColor.green(col)) / 255f,
         (float) (0xff & LXColor.blue(col)) / 255f);
-    s.setUniform("iColor2HSB", LXColor.h(col) / 360f, LXColor.s(col) / 100f, LXColor.b(col) / 100f);
+    this.uniforms.iColor2HSB.setValue(
+        LXColor.h(col) / 360f, LXColor.s(col) / 100f, LXColor.b(col) / 100f);
   }
 
   @Override
