@@ -4,7 +4,6 @@ import heronarts.lx.GpuDevice;
 import heronarts.lx.LX;
 import heronarts.lx.color.LXColor;
 import heronarts.lx.model.LXModel;
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -55,14 +54,8 @@ public class GLShaderPattern extends TEPerformancePattern implements GpuDevice {
     this(lx, TEShaderView.ALL_POINTS);
   }
 
-  protected ByteBuffer imageBuffer;
-
   public GLShaderPattern(LX lx, TEShaderView view) {
     super(lx, view);
-
-    if (this.lx.engine.renderMode.cpu) {
-      imageBuffer = TEShader.allocateBackBuffer();
-    }
   }
 
   protected TEShader addShader(GLShader.Config config) {
@@ -102,9 +95,7 @@ public class GLShaderPattern extends TEPerformancePattern implements GpuDevice {
       this.shaders.get(i).setCpuBuffer(null);
     }
     // Set the CPU buffer for the last shader, if using CPU mixer
-    this.shaders
-        .get(this.shaders.size() - 1)
-        .setCpuBuffer(this.lx.engine.renderMode.cpu ? this.colors : null);
+    this.shaders.getLast().setCpuBuffer(this.lx.engine.renderMode.cpu ? this.colors : null);
 
     // Run the chain of shaders,
     // mapping the output texture of each to the next shader's input texture
